objects/RA_Source__c.object
<CustomObject>
    <label>Source</label>
    <nameField>
        <label>Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <label>Source Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>DisplayOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>